--- a/pahina.html
+++ b/pahina.html
@@ -9,7 +9,7 @@
         header{
             background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(IMG_4963.JPG);
             height: 100vh;
-            width: auto;
+            width: 100vw;
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
