--- a/pahina.html
+++ b/pahina.html
@@ -8,9 +8,9 @@
         }
         header{
             background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(IMG_4963.JPG);
-            height: 100;
+            height: 100vh;
             width: 100;
-            background-size:contain;
+            background-size:cover;
             background-position:center;
             background-attachment: fixed;
             
