--- a/pahina.html
+++ b/pahina.html
@@ -10,7 +10,7 @@
             background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(IMG_4963.JPG);
             height: 100vh;
             width: 60;
-            background-size:contain;
+            background-size:cover;
             background-position:center;
             background-attachment: fixed;
             background-repeat: no-repeat;
