--- a/pahina.html
+++ b/pahina.html
@@ -7,10 +7,10 @@
            background-color: black;
         }
         header{
-            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(IMG_5019.JPG);
-            height: 100vh;
-            width: 100vw;
-            background-size:cover;
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(header%20background.jpg);
+            height: 160;
+            width: auto;
+            background-size: cover;
             background-position:center;
             background-attachment: fixed;
             background-repeat: no-repeat;
