--- a/pahina.html
+++ b/pahina.html
@@ -129,12 +129,12 @@
         }
         
         section{
-            height: 50vh;
-            max-height: auto;
-            background-size:contain;
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(header%20background.jpg);
+            height: 100vh;
+            background-size:cover;
             background-position:center;
             background-attachment: fixed;
-            border-color: darkgoldenrod;
+            background-repeat: no-repeat;
         }
         
         #why {
