--- a/pahina.html
+++ b/pahina.html
@@ -243,6 +243,7 @@
     </header>
     <section class="why">
         <div class="center-text">
+            <h2 style="color: aliceblue; font-family: sans-serif; font-weight: 100; font-size: 15px;">Why?</h2>
             
         </div>
             
