--- a/pahina.html
+++ b/pahina.html
@@ -4,7 +4,7 @@
     <title>Free web designs</title>
     <style>
         body{
-            background-color: none;
+            background-color: black;
         }
         header{
             background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(IMG_4963.JPG);
