--- a/pahina.html
+++ b/pahina.html
@@ -7,9 +7,9 @@
             background-color: black;
         }
         header{
-            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(IMG_4963.JPG);
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(header%20background3.jpg);
             height: 100vh;
-            background-size: cover;
+            background-size: contain;
             background-position: center;
             background-attachment: fixed;
             background-repeat: no-repeat;
