--- a/pahina.html
+++ b/pahina.html
@@ -10,9 +10,10 @@
             background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(IMG_4963.JPG);
             height: 100vh;
             max-width: 400;
-            background-size: cover;
+            background-size: contain;
             background-position: center;
             background-attachment: fixed;
+            background-repeat: no-repeat;
             
              
         }
