--- a/pahina.html
+++ b/pahina.html
@@ -148,7 +148,7 @@
             
         }
         section{
-            background-color: none;
+            background-color:#404040;
             height: 100vh;
             max-width: 400;
             background-size: cover;
