--- a/pahina.html
+++ b/pahina.html
@@ -281,6 +281,7 @@
         footer{
             background-color: dimgray;
             color:black;
+            padding: 15px;
         }
     
         .footer-menu{
@@ -295,7 +296,7 @@
         }
         .footer-menu a{
             text-transform: uppercase;
-            color: dimgray;
+            color: black;
             text-decoration: none;
             border-bottom: 2px solid darkgoldenrod;
             transition: color 1s ease-out border, border-color 2s ease-out;
@@ -317,7 +318,7 @@
         }
         .social-menu a{
             text-transform: uppercase;
-            color: dimgray;
+            color: black;
             text-decoration: none;
             border-bottom: 2px solid darkgoldenrod;
             transition: color 1s ease-out border, border-color 2s ease-out;
