--- a/pahina.html
+++ b/pahina.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Free web designs</title>
+    <title>Free webpage designs</title>
     <style>
         body{
             background-color: none;
@@ -183,22 +183,22 @@
         }
         .take-me-there .heading1{
             animation-name: flip;
-            animation-duration: 5s;
-            animation-timing-function: linear;
-            animation-iteration-count:none;
+            animation-duration: 3s;
+            animation-timing-function:ease-in-out;
+            animation-iteration-count:infinite;
             
         }
         @keyframes flip{
             0%{
-                background-color: aliceblue;}
+                color: dimgray;}
             25%{
-                background-color: coral;}
+                color: darkgray;}
             50%{
-                background-color: chartreuse;}
+                color:burlywood;}
             75%{
-                background-color: darkgoldenrod;}
+                color: darkgoldenrod;}
             100%{
-                background-color: dimgrey;
+                color: dimgrey;
             }
         }
     
