--- a/pahina.html
+++ b/pahina.html
@@ -47,7 +47,7 @@
             background-color: black;
             height: 100vh;
             max-width: 500;
-            background-size: cover;
+            background-size: contain;
             background-position: center;
             background-attachment: fixed;
             background-repeat: no-repeat;
