--- a/pahina.html
+++ b/pahina.html
@@ -139,7 +139,7 @@
             
         }
         .menu li{
-            display: inline-block;
+            display: block;
             margin: 80px 0px 0px 190p;
             align-items: center;
             justify-content: center;
@@ -147,7 +147,7 @@
             
         }
         .menu a{
-            font-size: 10px;
+            font-size: 25px;
             font-weight: 400;
             display: inline-block;
             position: relative;
