--- a/pahina.html
+++ b/pahina.html
@@ -13,8 +13,12 @@
             display: inline-block;
             width: 75%;
             margin: 0 auto;
+            font-size: 22px;
             
             
+        }
+        h1, h2{
+            font-size: 45px;
         }
         .button{
             font-size: 20px;
@@ -430,12 +434,12 @@
                                 <li>
                                     <a href="#why">
                                         <span class="default">Why</span>
-                                        <span class="over">Why</span></a></li>
+                                        <span class="over">Why</span></a></li><br>
 
                                 <li>
                                     <a href="#inspire-me">
                                         <span class="default">Inspire Me</span>
-                                        <span class="over">Inspire Me</span></a></li>
+                                        <span class="over">Inspire Me</span></a></li><br>
 
                                 <li>
                                     <a href="#show-me">
