--- a/pahina.html
+++ b/pahina.html
@@ -190,7 +190,7 @@
             background-color: black;
             border: 1px solid #555;
             border-top-color:darkgoldenrod;
-            display: block;
+            display: inline-block;
         }
         
         .menu a:hover .default{
