--- a/pahina.html
+++ b/pahina.html
@@ -99,6 +99,7 @@
             float: left;
             position: relative;
             margin: 0px 0;
+            margin-right: 2px;
         }
 
         .logo-wrap{
@@ -221,6 +222,7 @@
             font-family: Georgia, serif, "sans-serif";
             font-weight: 30px;
             color:dimgray;
+            margin-right: 2px;
             
         }
         .take-me-there .heading1{
