--- a/pahina.html
+++ b/pahina.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Training</title>
+<title>Pahina Live Page</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
     @media screen and (max-width: 500px) {
