--- a/pahina.html
+++ b/pahina.html
@@ -29,6 +29,7 @@
             float: left;
             display: block;
             text-align: left;
+            font-size: 1vw;
         }
     }
     
