--- a/pahina.html
+++ b/pahina.html
@@ -135,7 +135,7 @@
  <header>
   <div class="header" style="overflow: hidden;
   background-color: black;
-  padding: 20px 10px;"><img src="20210228_093058.png" style="float: left; width: 65px; display: inline-block;
+  padding: 20px 10px; background-image: url(header%20background4.jpg); height: 50vh; background-size: contain; background-repeat: no-repeat;"><img src="20210228_093058.png" style="float: left; width: 65px; display: inline-block;
             border: 2px solid darkgoldenrod;
             border-radius: 14px;
 "/>
@@ -156,11 +156,7 @@
   </div>
      </div>
 </header>
-<section class="section1" style="background-image: url(header%20background4.jpg); height: 100vh; max-width: 500;
-            background-size: contain;
-            background-position: center;
-            background-attachment: fixed;
-            background-repeat: no-repeat;">
+<section class="section1">
     <div>
         <p style="text-align: center; color: dimgray; font-size: 30px;">Create and design your own web page</p>
             <nav class="menu menu1" style="text-align: center;">
