--- a/pahina.html
+++ b/pahina.html
@@ -135,7 +135,7 @@
  <header>
   <div class="header" style="overflow: hidden;
   background-color: black;
-  padding: 20px 10px; background-image: url(header%20background4.jpg); height: 50vh; background-size: contain; background-repeat: no-repeat; linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7));"><img src="20210228_093058.png" style="float: left; width: 65px; display: inline-block;
+  padding: 20px 10px;"><img src="20210228_093058.png" style="float: left; width: 65px; display: inline-block;
             border: 2px solid darkgoldenrod;
             border-radius: 14px;
 "/>
@@ -157,7 +157,7 @@
      </div>
 </header>
 <section class="section1">
-    <div>
+    <div style="background-color: black; background-image: url(header%20background4.jpg); height: 100vh; background-attachment: fixed; background-size: contain;">
         <p style="text-align: center; color: dimgray; font-size: 30px;">Create and design your own web page</p>
             <nav class="menu menu1" style="text-align: center;">
                           
