--- a/pahina.html
+++ b/pahina.html
@@ -157,7 +157,7 @@
      </div>
 </header>
 <section class="section1">
-    <div style="background-color: black; background-image: url(header%20background4.jpg); height: 100vh; background-attachment: fixed; background-size: contain;">
+    <div style="background-color: black; background-image: url(header%20background4.jpg); height: 100vh; background-attachment: fixed; background-size: contain; background-repeat: no-repeat; background-position: center;">
         <p style="text-align: center; color: dimgray; font-size: 30px;">Create and design your own web page</p>
             <nav class="menu menu1" style="text-align: center;">
                           
