--- a/pahina.html
+++ b/pahina.html
@@ -163,8 +163,8 @@
   </div>
      </div>
 </header>
-<section class="section1">
-    <div style="background-color: black; background-image: url(header%20background4.jpg); height: 100vh; background-attachment: fixed; background-size: contain; background-repeat: no-repeat; background-position: center;">
+<section class="section1" style="background-color: black; background-image: url(header%20background4.jpg); height: 110vh; background-attachment: fixed; background-size: contain; background-repeat: no-repeat; background-position: center;">
+    <div> 
         <p style="text-align: center; color: dimgray; font-size: 30px;">Create and design your own web page</p>
             <nav class="menu menu1" style="text-align: center;">
                           
