--- a/pahina.html
+++ b/pahina.html
@@ -315,6 +315,11 @@
    <div>
        <p style="text-align: center;">Here, I will attach images of my web page templates to show examples of different designs. I will also linked those images to the actual web page so the source codes can be viewed.</p>
    </div>
+   <div class="button1 center-text" >
+                            <a href="" class="button to-top" title="Back to top of page">
+                                <span class="arrows up"></span> <!--The Span is empty - it's because the content (which is the entity of ARROW BUTTON) is a CSS attribute. So where the span class .button .arrows is targeted, inside it, the content (arrow button code \00BB) is where it is added.-->                
+                        </a>
+                        </div>
     
 </section>
 
@@ -325,6 +330,11 @@
     <div>
         <p style="text-align: center;">Finally, I will add a tutorial video of how the codes from my templates can be viewed, copied, recreated and changed to personal taste and preference. I will also show how the images and logos can be replaced from your own collection on your computer.</p>
     </div>
+    <div class="button1 center-text" >
+                            <a href="" class="button to-top" title="Back to top of page">
+                                <span class="arrows up"></span> <!--The Span is empty - it's because the content (which is the entity of ARROW BUTTON) is a CSS attribute. So where the span class .button .arrows is targeted, inside it, the content (arrow button code \00BB) is where it is added.-->                
+                        </a>
+                        </div>
 </section>
   
    
