--- a/pahina.html
+++ b/pahina.html
@@ -355,7 +355,7 @@
         <h2 class="heading2 gold">Why</h2>
     </div>
     <div>
-        <p style="text-align: center;">In this part, I will explain why it is better to create and design your web page by hand-coding your HTML and CSS. I will also add links from other sites/blogs where more information can be found.</p>
+        <p style="text-align: center; font-weight:bold;">In this part, I will explain why it is better to create and design your web page by hand-coding your HTML and CSS. I will also add links from other sites/blogs where more information can be found.</p>
     </div>
     <div class="button1 center-text" >
                             <a href="" class="button to-top" title="Back to top of page">
