--- a/pahina.html
+++ b/pahina.html
@@ -389,7 +389,8 @@
     </div>
     <div></div>
     <div>
-        <p style="text-align: center;">In this part, I will explain why it is better to create and design your web page by hand-coding your HTML and CSS. I will also add links from other sites/blogs where more information can be found.</p>
+        <p style="text-align: center;">Whoops! Sorry, this page is still under construction...</p>
+            <img src="20141122_165606.jpg"/>
     </div>
     <div class="button1 center-text" >
                             <a href="" class="button to-top" title="Back to top of page">
@@ -404,7 +405,8 @@
    </div>
    <div></div>
    <div>
-       <p style="text-align: center;">Here, I will attach images of my web page templates to show examples of different designs. I will also linked those images to the actual web page so the source codes can be viewed.</p>
+       <p style="text-align: center;">Whoops! Sorry, this page is still under construction...</p>
+           <img src="20141122_165606.jpg"/>
    </div>
    <div class="button1 center-text" >
                             <a href="" class="button to-top" title="Back to top of page">
@@ -420,7 +422,8 @@
     </div>
     <div></div>
     <div>
-        <p style="text-align: center; padding-left: 20px; padding-right: 20px;">Finally, I will add a tutorial video of how the codes from my templates can be viewed, copied, recreated and changed to personal taste and preference. I will also show how the images and logos can be replaced from your own collection on your computer.</p>
+        <p style="text-align: center; padding-left: 20px; padding-right: 20px;">Whoops! Sorry, this page is still under construction...</p>
+            <img src="20141122_165606.jpg"/>
     </div>
     <div class="button1 center-text" >
                             <a href="" class="button to-top" title="Back to top of page">
