--- a/pahina.html
+++ b/pahina.html
@@ -360,8 +360,8 @@
   </div>
 </header>
 <section>
-    <div style="background-image: url(header\ background4.jpg); background-attachment: fixed; background-size: cover; background-repeat: no-repeat; background-position: center; height: 100vh;">
-        <p style="text-align: center; color: dimgray; font-size: 30px; margin-top: 0px; margin-bottom: 0px; padding: 0px;">Create and design your own web page</p>
+    <div style="background-image: url(header\ background4.jpg); background-attachment: fixed; background-size: contain; background-repeat: no-repeat; background-position: center; height: 100vh;">
+        <p style="text-align: center; color: dimgray; font-size: 30px; margin-top: px; margin-bottom: px; padding: px;">Create and design your own web page</p>
         <nav class="menu menu1" style="text-align: center;">
                           
                            
