--- a/pahina.html
+++ b/pahina.html
@@ -337,7 +337,7 @@
 </style>
 
 
-<body style="background-image: url(); background-attachment: fixed; background-size: cover; background-repeat: no-repeat;background-position: center;">
+<body style="background-image: url(Cyprus.JPG); background-attachment: fixed; background-size: cover; background-repeat: no-repeat;background-position: center;">
  <header>
   <div class="header" style="overflow: hidden;
   background-color: ;
@@ -359,7 +359,7 @@
     
   </div>
 </header>
-<section>
+<section style="background-color: rgb(0, 0, 0);">
     <div style="background-image: url(header\ background4.jpg); background-attachment: fixed; background-size: contain; background-repeat: no-repeat; background-position: center; height: 100vh;">
         <p style="text-align: center; color: dimgray; font-size: 30px; margin-top: px; margin-bottom: px; padding: px;">Create and design your own web page</p>
         <nav class="menu menu1" style="text-align: center;">
@@ -388,7 +388,7 @@
     
 
 <section id="why" id="#why">
-    <div style="height: 100vh; background-image: url(Boracay.jpg); background-attachment: fixed; background-size: cover; background-repeat: no-repeat;background-position: center;">
+    <div style="height: 100vh; background-image: url(); background-attachment: fixed; background-size: cover; background-repeat: no-repeat;background-position: center;">
         <p style="text-align: center;">Whoops! Sorry, this page is still under construction...</p>
         <div class="button1 center-text" >
             <a href="" class="button to-top" title="Back to top of page">
@@ -398,7 +398,7 @@
 </section>
    
 <section id="inspire-me" id="#inspire-me">
-   <div style="height: 100vh; background-image: url(Cyprus.JPG); background-attachment: fixed; background-size: cover; background-repeat: no-repeat;background-position: center;">
+   <div style="height: 100vh; background-image: url(); background-attachment: fixed; background-size: cover; background-repeat: no-repeat;background-position: center;">
         <p style="text-align: center;">Whoops! Sorry, this page is still under construction...</p>
         <div class="button1 center-text" >
             <a href="" class="button to-top" title="Back to top of page">
@@ -412,7 +412,7 @@
 </section>
 
 <section id="show-me" id="#show-me">
-    <div style="height: 100vh; background-image: url(Turkey.jpg); background-attachment: fixed; background-size: cover; background-repeat: no-repeat;background-position: center;">
+    <div style="height: 100vh; background-image: url(); background-attachment: fixed; background-size: cover; background-repeat: no-repeat;background-position: center;">
         <p style="text-align: center;">Whoops! Sorry, this page is still under construction...</p>
         <div class="button1 center-text" >
             <a href="" class="button to-top" title="Back to top of page">
