--- a/pahina.html
+++ b/pahina.html
@@ -359,7 +359,7 @@
     
   </div>
 </header>
-<section style="background-color: rgb(0, 0, 0);">
+<section style="background-color: black;">
     
     <div>
         <p style="text-align: center; color: dimgray; font-size: 30px; margin-top: px; margin-bottom: px; padding: px;">Create and design your own web page</p>
