--- a/pahina.html
+++ b/pahina.html
@@ -380,6 +380,9 @@
     <div>
         <p style="text-align: center;">Whoops! Sorry, this page is still under construction...</p>
     </div>
+    <div class="center-text">
+        <img src="olaf.jpg"/ style="width: 100px;">
+    </div>
         
         <div class="button1 center-text" >
             <a href="" class="button to-top" title="Back to top of page">
