--- a/pahina.html
+++ b/pahina.html
@@ -10,7 +10,7 @@
     }
 
     body{
-        background-image: url(whitesand.jpg); background-repeat: no-repeat; background-position: center; background-size: cover; position: relative;
+        background-image: url(turkey.jpg); background-repeat: no-repeat; background-position: center; background-size: cover; position: relative;
     }
 
     @media screen and (max-width: 1100px) {
@@ -426,9 +426,11 @@
             <p style="text-align: center;">Below is a template for a pretend Jewellery shop. It's a very basic main page but you can see the coding for this site by right clicking the web page and selecting 'View page source'. You can copy all the codes to recreate the page to use on your own website.</p>
                 
                 
-                <div class="column">
-                    <img src="template1.jpg" style="width:100%" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); width: 160px; margin: auto;
-                text-align: center; font-family: arial; padding: 15px;">
+                <div class="column" class="center-text">
+                    <p style="text-align: center;"><a href="https://grace-gardner.github.io/template1/index.html" target="_blank">
+                        <img src="turkey.jpg" alt="Facebook Page" style="height: 200px; width: 200px;" title="Visit my very BORING Facebook Page">
+                        </a>
+                </p>
                 </div>
 
                 <div class="button1 center-text">
