--- a/pahina.html
+++ b/pahina.html
@@ -425,9 +425,15 @@
             <h3 style="text-align: center;">Inspire Me</h3>
             <p style="text-align: center;">Below is a template for a pretend Jewellery shop. It's a very basic main page but you can see the coding for this site by right clicking the web page and selecting 'View page source'. You can copy all the codes to recreate the page to use on your own website.</p>
                 <div class="center-text">
+                <div class="column">
+                    <div class="card" class="shop" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 160px;
+  margin: auto;
+  text-align: center;
+  font-family: arial; padding: 15px; display: ;">
                 <a href="https://grace-gardner.github.io/template1/index.html">
-                    <img src="template1.jpg" style="width: 260px;" />
-                </a>
+                <img src="https://grace-gardner.github.io/template1/headerbackground.jpg" alt="product-image" style="width:100%">
+                    
                 </div>
             <div class="button1 center-text">
                     <a href="" class="button to-top" title="Back to top of page">
