--- a/pahina.html
+++ b/pahina.html
@@ -431,7 +431,7 @@
   margin: auto;
   text-align: center;
   font-family: arial; padding: 15px; display: ;">
-                <a href="https://grace-gardner.github.io/template1/index.html">
+                <a href="https://grace-gardner.github.io/template1/index.html" target="_blank">
                 <img src="https://grace-gardner.github.io/template1/headerbackground.jpg" alt="product-image" style="width:100%">
                     
                 </div>
