--- a/pahina.html
+++ b/pahina.html
@@ -10,7 +10,7 @@
     }
 
     body{
-        background-image: url(turkey.jpg); background-repeat: no-repeat; background-position: center; background-size: cover; position: relative;
+        background-image: url(); background-repeat: no-repeat; background-position: center; background-size: cover; position: relative;
     }
 
     @media screen and (max-width: 1100px) {
