--- a/pahina.html
+++ b/pahina.html
@@ -364,7 +364,7 @@
 
 <body>
  <header id="default" id="#default">
-    <div class="header" style="overflow: hidden; background-color: dimgrey; padding: 20px 10px;"><img src="20210228_093058.png" style="float: left; width: 65px; display: inline-block; border: 2px solid darkgoldenrod; border-radius: 14px;"/>
+    <div class="header" style="overflow: hidden; background-color: dimgrey; padding: 20px 10px;"><img src="https://grace-gardner.github.io/pahina/20210228_093058.png" style="float: left; width: 65px; display: inline-block; border: 2px solid darkgoldenrod; border-radius: 14px;"/>
         <a href="#default" style="float: left; color: darkgoldenrod; text-align: center; padding: 12px; text-decoration: none; font-size: 25px; line-height: 25px; border-radius: 4px;">Grace Gardner</a>
     </div>
 </header>
