--- a/pahina.html
+++ b/pahina.html
@@ -460,6 +460,13 @@
         <div>
         <h3 style="text-align: center;">Show Me</h3>
         <p style="text-align: center;">Whoops! Sorry, this page is still under construction...</p>
+            <div class="center-text">
+                <div class="column" style="height: 300px; width: 300px;">
+                    <embed src="tutorialvideo.mp4" autoplay="true" style="height: px; width: px; align-content: center;"/>
+                    
+                </div>
+                
+            </div>
 
         <div class="button1 center-text" >
             <a href="#default" class="button to-top" title="Back to top of page">
