--- a/pahina.html
+++ b/pahina.html
@@ -460,9 +460,9 @@
         <div>
         <h3 style="text-align: center;">Show Me</h3>
         <p style="text-align: center;">Whoops! Sorry, this page is still under construction...</p>
-            <div class="center-text">
+            <div class="center-text" class="column">
                 <div class="column" style="height: 300px; width: 300px;">
-                    <embed src="tutorialvideo.mp4" autoplay="true" style="height: px; width: px; align-content: center;"/>
+                    <embed class="column" src="TutorialVideo.mp4" autoplay="true" style="height: px; width: px; align-content: center;"/>
                     
                 </div>
                 
