--- a/pahina.html
+++ b/pahina.html
@@ -465,7 +465,7 @@
     <div class="center-text">
         <div>
         <h3 style="text-align: center;">Show Me</h3>
-        <p style="text-align: center;">Below is a tutorial video of how you can copy and recreat the web page.</p>
+        <p style="text-align: center;">Below are tutorial videos of how you can copy and recreat the web page.</p>
             <div class="center-text">
                 <div class="column">
                     <video class="column" style="height: 200px; width: 220px; padding: 20px;" controls>Your browser does not support the &lt;video&gt; tag.
@@ -478,6 +478,10 @@
 </section>
 <section style="height: 5px;"></section>
 <section>
+    <div class="center-text">
+        <p>Once you have copied the code, you can open the html file in your text editor and replace the contents with your own</p>
+        
+    </div>
             <div class="center-text">
                 <div class="column">
                     <video class="column" style="height: 200px; width: 220px; padding: 20px;" controls>Your browser does not support the &lt;video&gt; tag.
