--- a/pahina.html
+++ b/pahina.html
@@ -367,7 +367,7 @@
 </style>
 
 
-<body>
+<body style="background-image: url(whitebackground.jpg); background-repeat: no-repeat; background-attachment: fixed; background-position: center;">
  <header id="default" id="#default">
     <div class="header" style="overflow: hidden; background-color: dimgrey; padding: 20px 10px;"><img src="https://grace-gardner.github.io/pahina/20210228_093058.png" style="float: left; width: 65px; display: inline-block; border: 2px solid darkgoldenrod; border-radius: 14px;"/>
         <a href="#default" style="float: left; color: darkgoldenrod; text-align: center; padding: 12px; text-decoration: none; font-size: 25px; line-height: 25px; border-radius: 4px;">Grace Gardner</a>
@@ -479,7 +479,7 @@
 <section style="height: 5px;"></section>
 <section>
     <div class="center-text">
-        <p>Once you have copied the code, you can open the html file in your text editor and replace the contents with your own</p>
+        <p>Once you have copied the code, you can open the html file in your text editor and replace the contents with your own.</p>
         
     </div>
             <div class="center-text">
