--- a/pahina.html
+++ b/pahina.html
@@ -40,6 +40,10 @@
         color: darkgoldenrod;
         
     }
+    .social-menu{
+        float: left;
+        display: block;
+    }
     
     @media screen and (max-width: 500px){
         .section1 p{
