--- a/pahina.html
+++ b/pahina.html
@@ -78,7 +78,7 @@
 
     @media only screen and (max-width: 430px) {
         .column{
-            display: none;
+            display: left;
         }
         .small-screen{
             display: block;
@@ -86,16 +86,16 @@
             font-size: 60px;
         }
         .header a{
-            display: none;}
+            display: block;}
 
         .header-right{
-            display: none;}
+            display: block;}
 
         .header-right a{
-            display: none;}
+            display: block;}
 
         .social-menu{
-            display: none;}
+            display: block;}
 
         
     } /* end of media screen 430px */
