--- a/pahina.html
+++ b/pahina.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <title>Pahina</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <script src="https://kit.fontawesome.com/fd14e678e6.js" crossorigin="anonymous"></script>
 <style>
 
