--- a/pahina.html
+++ b/pahina.html
@@ -302,7 +302,7 @@
 
 <body>
  <h1 class="small-screen">Error! Your screen is too small to display this page!</h1>   
- <header id="default" id="#default" style="height: 100vh; background-image: url(logo.jpg); background-size: cover; background-attachment: fixed; background-repeat: no-repeat; background-position: center;">
+ <header id="default" id="#default" style="height: 100vh; background-image: url(logo.jpg); background-size: contain; background-attachment: fixed; background-repeat: no-repeat;">
     <div class="container">
         <div class="header" style="overflow: hidden; background-color: none; padding: 20px 10px;"><img src="https://grace-gardner.github.io/pahina/20210228_093058.png" style="float: left; width: 65px; display: inline-block; border: 2px solid darkgoldenrod; border-radius: 14px;"/>
             <a href="#default" style="float: left; color: darkgoldenrod; text-align: center; padding: 12px; text-decoration: none; font-size: 25px; line-height: 25px; border-radius: 4px;">Grace Gardner</a>
@@ -329,9 +329,9 @@
                                
                 <ul>
                     <li>
-                        <a href="#about">
-                            <span class="default">About</span>
-                            <span class="over">About</span></a></li>
+                        <a href="#how">
+                            <span class="default">How</span>
+                            <span class="over">How</span></a></li>
 
                     <li>
                         <a href="#inspire-me">
@@ -357,7 +357,7 @@
 
     
 
-<section id="about" id="#about">
+<section id="how" id="#how" style="height: 100vh;">
     <div class="container">
         <div>
             <p style="text-align: center;">About Section</p>
@@ -367,7 +367,7 @@
 
 
 
-<section id="inspire-me" id="#inspire-me">
+<section id="inspire-me" id="#inspire-me" style="height: 100vh;">
     <div class="container">
         <div>
             <p style="text-align: center;">Below is a template for a pretend Jewellery shop. It's a very basic main page but you can see the coding for this site by right clicking the web page and selecting 'View page source'. You can copy all the codes to recreate the page to use on your own website.</p>
