--- a/pahina.html
+++ b/pahina.html
@@ -302,8 +302,8 @@
 
 <body>
  <h1 class="small-screen">Error! Your screen is too small to display this page!</h1>   
- <header id="default" id="#default" style="height: 100vh; background-image: url(logo.jpg); background-size: contain; background-attachment: fixed; background-repeat: no-repeat;">
-    <div class="container">
+ <header id="default" id="#default">
+    <div class="container" style="height: 100vh; background-image: url(logo.jpg); background-size: contain; background-attachment: fixed; background-repeat: no-repeat;">
         <div class="header" style="overflow: hidden; background-color: none; padding: 20px 10px;"><img src="https://grace-gardner.github.io/pahina/20210228_093058.png" style="float: left; width: 65px; display: inline-block; border: 2px solid darkgoldenrod; border-radius: 14px;"/>
             <a href="#default" style="float: left; color: darkgoldenrod; text-align: center; padding: 12px; text-decoration: none; font-size: 25px; line-height: 25px; border-radius: 4px;">Grace Gardner</a>
             <!-------------------------------------------------------------------------------------------------------------------------->
@@ -343,7 +343,6 @@
                             <span class="default">Show Me</span>
                             <span class="over">Show Me</span></a></li>
                 </ul>
-                
             </nav>
         </div>
     </div>
