--- a/pahina.html
+++ b/pahina.html
@@ -303,7 +303,7 @@
 <body>
  <h1 class="small-screen">Error! Your screen is too small to display this page!</h1>   
  <header id="default" id="#default">
-    <div class="container" style="height: 100vh; background-image: url(logo.jpg); background-size: contain; background-attachment: fixed; background-repeat: no-repeat;">
+    <div class="container" style="height: 100vh; background-image: url(logo.jpg); background-size: cover; background-attachment: fixed; background-repeat: no-repeat; background-color: silver;">
         <div class="header" style="overflow: hidden; background-color: none; padding: 20px 10px;"><img src="https://grace-gardner.github.io/pahina/20210228_093058.png" style="float: left; width: 65px; display: inline-block; border: 2px solid darkgoldenrod; border-radius: 14px;"/>
             <a href="#default" style="float: left; color: darkgoldenrod; text-align: center; padding: 12px; text-decoration: none; font-size: 25px; line-height: 25px; border-radius: 4px;">Grace Gardner</a>
             <!-------------------------------------------------------------------------------------------------------------------------->
@@ -323,7 +323,7 @@
             </ul>
         </div>
         <div>
-            <p style="text-align: center; color: dimgray; font-size: 30px; margin-top: px; margin-bottom: px; padding: px;">Create and design your own web page</p>
+            <p style="text-align: center; color: darkgoldenrod; font-size: 30px; margin-top: px; margin-bottom: px; padding: px;">Create and design your own web page</p>
             <nav class="menu menu1" style="text-align: center;">
                               
                                
