--- a/pahina.html
+++ b/pahina.html
@@ -328,6 +328,9 @@
                     <a href="#default" target="" title="Tweeter"><i class="fab fa-twitter-square" style="color: dimgrey;"></i></a>
                 </li>
             </ul>
+
+                    
+                </div>
         </div>
     </div>
 </header>
@@ -342,7 +345,8 @@
         background-image: url(logo.jpg); background-size: contain; background-repeat: no-repeat; height: 100vh;">
                 <div>
                     <h1 style="color: darkgoldenrod; text-align: center;">Create & design your own website</h1>
-                    <div class="menu menu1" style="text-align: center;">
+            
+                    <div class="menu menu1" style="text-align: center; padding-top: 120px;">
                          <ul>
                             <li>
                                 <a href="#how">
