--- a/pahina.html
+++ b/pahina.html
@@ -343,7 +343,7 @@
         padding: 0 20px;
         box-sizing: border-box;
         position: relative;
-        background-image: url(logo.jpg); background-size: contain; background-repeat: no-repeat; height: 100vh;">
+        background-image: url(https://grace-gardner.github.io/pahina/logo.jpg); background-size: contain; background-repeat: no-repeat; height: 100vh;">
                 <div>
                     <h1 style="color: darkgoldenrod; text-align: center;">Create & design your own website</h1>
             
