--- a/pahina.html
+++ b/pahina.html
@@ -347,7 +347,7 @@
                 <div>
                     <h1 style="color: darkgoldenrod; text-align: center;">Create & design your own website</h1>
             
-                    <div class="menu menu1" style="text-align: center; padding-top: 120px;">
+                    <nav class="menu menu1" style="text-align: center;">
                          <ul>
                             <li>
                                 <a href="#how">
@@ -363,7 +363,7 @@
                                     <span class="default">Show Me</span>
                                     <span class="over">Show Me</span></a></li>           
                             </ul>
-                    </div>
+                    </nav>
                     
                 </div>
 </section>
