--- a/pahina.html
+++ b/pahina.html
@@ -14,7 +14,9 @@
     }
 
     body{
-        background-color: ;
+        background-image: url(https://grace-gardner.github.io/pahina/logo.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
     }
     .container{
         width: 100%;
@@ -23,7 +25,7 @@
         padding: 0 20px;
         box-sizing: border-box;
         position: relative;
-        background-color: #E4E7EB;
+        background-color: #E4E7EB; opacity: 0.7;
          
 
 
@@ -337,13 +339,12 @@
 </header>
 
 <section>
-    <div style="width: 100%;
+    <div style="width:%;
         max-width: 1145px;
-        margin: 0 auto;
-        padding: 0 20px;
+        padding: 0px;
         box-sizing: border-box;
         position: relative;
-        background-image: url(https://grace-gardner.github.io/pahina/logo.jpg); background-size: contain; background-repeat: no-repeat; height: 100vh;">
+        background-image: url(https://grace-gardner.github.io/pahina/logo.jpg); background-size: contain; background-repeat: no-repeat; background-position: center; background-attachment: fixed; height: 100vh; margin: 0 auto;">
                 <div>
                     <h1 style="color: darkgoldenrod; text-align: center;">Create & design your own website</h1>
             
