--- a/pahina.html
+++ b/pahina.html
@@ -344,7 +344,7 @@
         padding: 0px;
         box-sizing: border-box;
         position: relative;
-        background-image: url(https://grace-gardner.github.io/pahina/logo.jpg); background-size: contain; background-repeat: no-repeat; background-position: center; background-attachment: fixed; height: 100vh; margin: 0 auto;">
+        background-image: url(https://grace-gardner.github.io/pahina/logo.jpg); background-size: cover; background-repeat: no-repeat; background-position: center; height: 100vh; margin: 0 auto;">
                 <div>
                     <h1 style="color: darkgoldenrod; text-align: center;">Create & design your own website</h1>
             
