--- a/pahina.html
+++ b/pahina.html
@@ -36,12 +36,12 @@
         padding: 0 20px;
         box-sizing: border-box;
         position: relative;
-        background-image: url(IMG_4963.jpg);
+        background-image:image(C:\Users\GRACE GARDNER\Documents\GitHub\pahina\IMG_4963.JPG)
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         height: 100vh;
-        -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+        -webkit-filter: blur(5px);
         filter: blur(5px);
 
 
