--- a/pahina.html
+++ b/pahina.html
@@ -36,7 +36,7 @@
         padding: 0 20px;
         box-sizing: border-box;
         position: relative;
-        background-image:image(C:\Users\GRACE GARDNER\Documents\GitHub\pahina\IMG_4963.JPG)
+        background-image: url(IMG_4963.JPG)
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
