--- a/pahina.html
+++ b/pahina.html
@@ -36,8 +36,8 @@
         padding: 0 20px;
         box-sizing: border-box;
         position: relative;
-        background-image: url(wedding.JPG);
-        background-size: cover;
+        background-image: url(https://grace-gardner.github.io/pahina/wedding.JPG);
+        background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
         height: 100vh;
