--- a/pahina.html
+++ b/pahina.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Practice Pad</title>
+<title>Pahina</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <script src="https://kit.fontawesome.com/fd14e678e6.js" crossorigin="anonymous"></script>
 <style>
