--- a/pahina.html
+++ b/pahina.html
@@ -503,7 +503,7 @@
                     </li>
                 </ul>
             </nav>
-            <p style="text-align: center; padding-top: 30px;">Once you have copied and saved the codes on your device, you can upload the code on your text editor and replace the contents with your own.<br>You can replace the company name, logo, images and other contents that you want on your website.</p>
+            <p style="text-align: center; padding-top: 30px;">Once you have copied and saved the codes on your device, you can upload the code on your text editor and replace the contents with your own.<br>You can replace the company name, logo, images and other contents with what you want on your website.</p>
             <nav class="menu menu1" style="text-align: center;">
                 <ul>
                     <li>
