--- a/pahina.html
+++ b/pahina.html
@@ -353,6 +353,8 @@
 
 
 
+
+
 </style>
 
 
@@ -481,8 +483,8 @@
                          <ul>
                             <li>
                                 <a href="#show-me">
-                                    <span class="default">Show Me</span>
-                                    <span class="over">Show Me</span>
+                                    <span class="default">Show Me How</span>
+                                    <span class="over">Show Me How</span>
                                 </a>
                             </li>
                         </ul>
@@ -524,6 +526,8 @@
         </div>
     </div>
 </section>
+
+
 
 <footer>
     <div class="container">
