--- a/pahina.html
+++ b/pahina.html
@@ -468,7 +468,7 @@
                         <div class="column">
                             <div style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); width: 160px;margin: auto;text-align: center;font-family: arial; padding: 15px;">
                                 <a href="https://grace-gardner.github.io/pahina/freetemplate1.html">
-                                    <img src="https://grace-gardner.github.io/template1/headerbackground.jpg" alt="product-image" style="width:100%"/>
+                                    <img src="https://grace-gardner.github.io/template1/headerbackground.jpg" alt="product-image" style="width:100%"/><figcaption style="color: black;">Retail Shop</figcaption>
                                 </a>
                             </div>
                         </div>
