--- a/pahina.html
+++ b/pahina.html
@@ -9,6 +9,7 @@
 <meta charset="UTF-8">
 <title>Pahina</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <script src="https://kit.fontawesome.com/fd14e678e6.js" crossorigin="anonymous"></script>
 <style>
 
@@ -458,7 +459,7 @@
     
             <p style="color: darkgoldenrod; text-align: center; padding-top: 30px;">How is this different from website builders and other free web design websites?</p>
 
-            <p style="text-align: center; padding-top: 30px;">A lot, if not all website builders will require you to sign up and create an account with them before you can start using their services. Other websites offering free design templates will require you to download 2 separate files (one for HTML and  the other for the CSS). The formation and design of a website go hand-in-hand with both files being linked together. If one file is corrupted or needs debugging, it will ultimately affect the design. The templates I have created have both the HTML and CSS hand-coded within it. No downloads, no sign ups, just copy and paste! Simply click on the image to go to the sample website and if you like the look and design, right click anywhere on the page and and click on "View Page Source". You can then "select all and copy" (CTRL+A, CTRL+C) the codes and save it in a folder on your computer.</p>
+            <p style="text-align: center; padding-top: 30px;">A lot of, if not all website builders will require you to sign up and create an account with them before you can start using their services. Other websites offering free design templates will require you to download 2 separate files (one for HTML and  the other for the CSS). The formation and design of a website go hand-in-hand with both files being linked together. If one file is corrupted or needs debugging, it will ultimately affect the design. The templates I have created have both the HTML and CSS hand-coded within it. No downloads, no sign ups, just copy and paste! Simply click on the image to go to the sample website and if you like the look and design, right click anywhere on the page and and click on "View Page Source". You can then "select all and copy" (CTRL+A, CTRL+C) the codes and save it in a folder on your computer.</p>
             
             <nav class="menu menu1" style="text-align: center;">
 
