--- a/pahina.html
+++ b/pahina.html
@@ -33,7 +33,9 @@
         padding: 0 20px;
         box-sizing: border-box;
         position: relative;
-        background-color: #F5F5F5; opacity: 0.5;
+        background-color: #e6eef0; opacity: 0.5;
+        
+
     }
     
     .header-container{
