--- a/pahina.html
+++ b/pahina.html
@@ -364,13 +364,13 @@
 <body>
 
 <header>
-    <div class="header-container1">
+    <div class="header-container">
         <div class="header" style="overflow: hidden; background-color: none; padding: 20px 10px;"><img src="https://grace-gardner.github.io/pahina/20210228_093058.png" style="float: left; width: 65px; display: inline-block; border: 2px solid darkgoldenrod; border-radius: 14px;"/>
             <a href="#default" style="float: left; color: darkgoldenrod; text-align: center; padding: 12px 5px; text-decoration: none; font-size: 25px; line-height: 25px; border-radius: 4px;">Grace Gardner</a>
             <!-------------------------------------------------------------------------------------------------------------------------->
             <ul class="social-menu" style="padding: 0; list-style-type: none; margin: 7px 0;">
                 <li style="float: right; margin: 0 2px;">
-                    <a href="#default" target="" title="Facebook"><i class="fab fa-facebook-square" style="color: dimgrey;"></i></a>
+                    <a href="https://www.facebook.com/Free-Web-Designs-110332504444278/" target="_blank" title="Facebook"><i class="fab fa-facebook-square" style="color: dimgrey;"></i></a>
                 </li>
                 <li style="float: right; margin: 0 2px;">
                     <a href="#default" target="" title="Instagram"><i class="fab fa-instagram-square" style="color: dimgrey;"></i></a>
