--- a/pahina.html
+++ b/pahina.html
@@ -530,6 +530,18 @@
     </div>
 </section>
 
+<section>
+    <div class="container">
+        <div>
+            <p style="text-align: center; padding-top: 30px;">More web designs are available on my Facebook page<a href="https://www.facebook.com/Free-Web-Designs-110332504444278/" target="_blank" title="Facebook"><br><i class="fab fa-facebook-square" style="color: dimgrey;"></i></a></p><br>
+            <p style="text-align: center; padding-top: 30px;">Or if you would like to learn more about HTML and CSS coding, please vist my <a href="https://grace-gardner.github.io/cartoon-hero/test.html">Blog</a> for more tutorial videos</p>
+
+            
+        </div>
+        
+    </div>
+</section>
+
 
 
 <footer>
