--- a/pahina.html
+++ b/pahina.html
@@ -351,8 +351,8 @@
 @keyframes move{
         0%   {left:0px; top:0px;}
         25%  {left:50px; top:0px;}
-        50%  {left:70px; top:100px;}
-        75%  {left:0px; top:100px;}
+        50%  {left:70px; top:50px;}
+        75%  {left:0px; top:50px;}
         100% {left:0px; top:0px;}
     }
 
@@ -547,9 +547,10 @@
 <section>
     <div class="container">
         <div>
-            <p style="text-align: center; padding-top: 30px;">More web designs are available on my Facebook page</p><br>
+            <p>Follow me on Facebook for more free web designs and </p>
             <div class="move" style="text-align: center; margin: 0 auto;"><a href="https://www.facebook.com/Free-Web-Designs-110332504444278/" target="_blank" title="Facebook"><br><i class="fab fa-facebook-square" style="color: dimgrey;"></i></a></div>
-            <p style="text-align: center; padding-top: 30px;">Or if you would like to learn more about HTML and CSS coding, please visit my <a href="https://grace-gardner.github.io/cartoon-hero/test.html">Blog</a> for more tutorial videos</p>
+            <p>tutorial videos on how to create and design websites</p>
+            
 
             
         </div>
